--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <h1>PATH PANHA</h1>
-        <p class="job title"><strong>Apply For: </strong> WEB DEVELOPMENT</p>
+        <p class="job title"><strong>Apply For: </strong>Service</p>
 
         <div class="section">
           <h2>For Contact</h2>
@@ -84,7 +84,6 @@
             <li>Team Work</li>
             <li>Computer skill</li>
             <li>Graphic Design</li>
-            <li>Coding</li>
           </ul>
         </div>
       </div>
